# Museubi_Movie_Recommended_Sites

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260616_0001_initial_schema.py  20260714_0009_create_password_reset_tokens.py  20260714_0010_create_email_verification_codes.py  20260714_0011_add_revoked_at_to_password_reset_tokens.py  25d8a2a18004_add_refresh_tokens_table.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  admin.py  character.py  chat.py  interaction.py  mixins.py  movie.py  user.py
app/schemas/: admin.py  auth.py  character.py  interaction.py  movie.py  preference.py  ranking.py  user.py
app/services/: admin_service.py  auth_service.py  interaction_service.py  preference_service.py  ranking_service.py  user_activity_service.py  user_service.py
scripts/: verify_services.py
